<resources>
    <string name="app_name">File Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_appRedirect">Emma redirect...</string>
    <string name="title_appCrash">Help center!</string>
    <string name="title_changeMail">Change email</string>
    <string name="title_changeAccount">Change user name</string>
    <string name="title_changePassword">Change password</string>
    <string name="title_imageEditor">Image Editor</string>
    <string name="title_login">Sign in or register</string>
    <string name="title_forgotPassword">Forgot password</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_appInfo">App info</string>
    <string name="title_paymentService">Payment service</string>
    <string name="title_paymentServiceEdit">Edit payment service</string>
    <string name="title_paymentServiceAdd">Add payment service</string>
    <string name="title_note">Notes</string>
    <string name="title_fileExplorer">File explorer</string>
    <string name="title_fileDetail">File detail</string>
    <string name="title_videoPlayer">Video player</string>
    <string name="title_noteAdd">Add note</string>
    <string name="title_noteEdit">Edit note</string>
    <string name="title_billAdd">Add bill</string>
    <string name="title_billEdit">Edit bill</string>
    <string name="title_bookManager">Book manager</string>
    <string name="title_bookEdit">Edit book</string>
    <string name="title_lesson">Lessons</string>
    <string name="title_lessonEdit">Edit lesson</string>
    <string name="title_exam">Exams</string>
    <string name="title_examEdit">Edit exam</string>
    <string name="title_question">Questions</string>
    <string name="title_questionEdit">Edit question</string>
    <string name="title_content">Contents</string>
    <string name="title_contentEdit">Edit content</string>
    <string name="title_term">Term and condition</string>
    <string name="title_term_short">Term</string>
    <string name="title_license">License</string>
    <string name="title_profile">User info</string>
    <string name="title_datePicker">Date picker</string>
    <string name="title_filePicker">File picker</string>
    <string name="title_imagePicker">Image picker</string>
    <string name="title_listOfFeature">Application feature</string>
    <string name="title_info">Info</string>
    <string name="title_confirm">Confirm!</string>
    <string name="title_confirmRemove">Confirm to DELETE!</string>
    <string name="title_createOrder">Create order</string>
    <string name="title_cameraSetting">Camera setting</string>
    <string name="title_appSync">Emma syncing</string>
    <string name="title_bills">Bills</string>
    <string name="title_suppliers">Suppliers</string>
    <string name="title_supplierEdit">Edit supplier</string>
    <string name="title_supplierAdd">Add supplier</string>
    <string name="title_products">Products</string>
    <string name="title_productEdit">Edit product</string>
    <string name="title_productAdd">Add product</string>
    <string name="title_mediaList">File explorer</string>
    <string name="title_manageDev">Manager dev</string>
    <string name="title_listOfVersionBeta">Experimental features</string>
    <string name="title_listOfTest">Developing feature</string>
    <string name="title_testSound">Test sound</string>
    <string name="title_testReadQR">Read QR</string>
    <string name="title_testCamera">Camera</string>
    <string name="title_listOfApps">Our Apps</string>
    <string name="title_testOpenApp">Start app</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_library">Library</string>
    <string name="menu_reader">Reader</string>
    <string name="lbl_copied">Copied!</string>
    <string name="lbl_nothingCopied">Nothing to copied!</string>
    <string name="lbl_terms">Terms</string>
    <string name="lbl_signIn">Sign in or register</string>
    <string name="lbl_joinWithUs">Join with us</string>
    <string name="lbl_forgotPassword">Forgot password?</string>
    <string name="lbl_getCode">Get code</string>
    <string name="lbl_resetPassword">Reset password</string>
    <string name="lbl_changeUserName">Change user name</string>
    <string name="lbl_changeEmail">Change email</string>
    <string name="lbl_changePassword">Change password</string>
    <string name="lbl_signInShort">Sign in</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_emailCurrent">Current email</string>
    <string name="lbl_userName">User name</string>
    <string name="lbl_userOrEmail">User name / email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_passwordOld">Current password</string>
    <string name="lbl_newPassword">New password</string>
    <string name="lbl_newPasswordConfirm">Confirm new password</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_takePicture">Take picture</string>
    <string name="lbl_pickImage">Pick image</string>
    <string name="lbl_all">All</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_rollback">Rollback</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_receiptImages">Receipt images</string>
    <string name="lbl_nickName">Nick name</string>
    <string name="lbl_birthDay">Birth day</string>
    <string name="lbl_signature">Signature</string>
    <string name="lbl_introduce">Introduce</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_pending">Pending</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_logOut">Logout</string>
    <string name="lbl_noteContent">Note content</string>
    <string name="lbl_noteTitle">Note title</string>
    <string name="lbl_supplierName">Supplier name</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_phoneNumber">Phone number</string>
    <string name="lbl_website">Website</string>
    <string name="lbl_taxCode">Tax code</string>
    <string name="lbl_foundingDate">Founding date</string>
    <string name="lbl_major">Major</string>
    <string name="lbl_bookTitle">Book title</string>
    <string name="lbl_viewDetail">View detail</string>
    <string name="lbl_viewGrid">View grid</string>
    <string name="lbl_viewGrid2">2 columns</string>
    <string name="lbl_viewGrid3">3 columns</string>
    <string name="lbl_viewGrid4">4 columns</string>
    <string name="lbl_viewGrid5">5 columns</string>
    <string name="lbl_viewGrid6">6 columns</string>
    <string name="lbl_viewLocalFile">Local file</string>
    <string name="lbl_viewOnlineFile">Online file</string>
    <string name="lbl_filterGroup">Filter</string>
    <string name="lbl_filterIgnore">Ignore</string>
    <string name="lbl_filterImage">Image</string>
    <string name="lbl_filterMusic">Music</string>
    <string name="lbl_filterVideo">Video</string>
    <string name="lbl_filterDocument">Document</string>
    <string name="lbl_sendToUs">Send to us!</string>
    <string name="lbl_backToApp">Back to app</string>
    <string name="lbl_printLog">Print log</string>
    <string name="lbl_unknowVal">--</string>
    <string name="lbl_net">Net</string>
    <string name="lbl_paymentServiceTitle">Title</string>
    <string name="lbl_provider">Provider</string>
    <string name="lbl_content">Content</string>
    <string name="lbl_fee">Fee</string>
    <string name="lbl_serviceType">Service type</string>
    <string name="lbl_repeat">Repeat</string>
    <string name="lbl_none">None</string>
    <string name="lbl_daily">Daily</string>
    <string name="lbl_weekly">Weekly</string>
    <string name="lbl_monthly">Monthly</string>
    <string name="lbl_yearly">Yearly</string>
    <string name="lbl_photoTimeStamp">Add time stamp on photos</string>
    <string name="lbl_cameraFrame">Camera frame</string>
    <string name="lbl_pictureQuality">Picture quality</string>
    <string name="lbl_cameraTimer">Camera timer</string>
    <string name="lbl_cameraFlash">Camera flash</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_addBillItem">Add bill item</string>
    <string name="lbl_addContact">Add contact</string>
    <string name="lbl_modifiedDate_s">Date modified: %s</string>
    <string name="lbl_path_s">Path: %s</string>
    <string name="lbl_description_s">Description: %s</string>
    <string name="lbl_releaseInfo_sss">Release no: %1$s \nRelease name: %2$s \nRelease time: %3$s</string>
    <string name="gender_unisex">Unisex</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="success">Success!</string>
    <string name="success_update">Update success!</string>
    <string name="success_delete">Delete success!</string>
    <string name="success_insert">Insert success!</string>
    <string name="success_upload">Upload success!</string>
    <string name="success_sendMail">Send mail success!</string>
    <string name="success_sendCodeMail">The code has been sent to your email,\n
Please check in your email!</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_nothingChange">Nothing change!</string>
    <string name="invalid_fieldNotEmpty">Must be not empty!</string>
    <string name="invalid_fieldMedium">Must be under 100 characters</string>
    <string name="invalid_fieldLarge">Must be under 200 characters</string>
    <string name="invalid_fieldHuge">Must be under 1000 characters</string>
    <string name="invalid_fileTooBig">File must be under 20MB</string>
    <string name="invalid_username">Username/Mail must be between 6 and 200 characters</string>
    <string name="invalid_email">Please recheck your email format, and the email must be between 6 and 200 characters</string>
    <string name="invalid_emailExist">You don\'t have email yet, please update email first</string>
    <string name="invalid_newMailSameOld">New email must not be same with current email</string>
    <string name="invalid_newAccSameOld">New user name must not be same with current user name</string>
    <string name="invalid_password">Password must be between 6 and 100 characters</string>
    <string name="invalid_confirmPassword">Confirm password must be same with password</string>
    <string name="invalid_newPasswordSameOld">New password must not be same with current password</string>
    <string name="invalid_codeRequest">Code must be 5 characters</string>
    <string name="invalid_optionType">Option type invalid</string>
    <string name="invalid_userLogged">Please login first!</string>
    <string name="msg_loginHaveReadAgree">I have read and agree to the</string>
    <string name="msg_loginRequestReadAgree">Please! read and agree to the term!</string>
    <string name="msg_crashSystemRequest"><![CDATA[ <h3>Oops! something went wrong.</h3> Please help us by describing on the form!]]></string>
    <string name="msg_loading">Just a few seconds…</string>
    <string name="msg_fileNotFound">File not found!</string>
    <string name="msg_fileCannotRead">Cannot read file!</string>
    <string name="msg_fileCannotSave">Cannot save file!</string>
    <string name="msg_unable">Unable to connect to the server!</string>
</resources>