<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/mniDone"
            android:icon="@drawable/ic_check"
            android:title="@string/lbl_done"
        android:iconTint="@color/menu_tint"
            android:visible="true"
            app:showAsAction="ifRoom" />

    <group
            android:id="@+id/showGroup"
            android:menuCategory="container">
        <item
                android:id="@+id/mniLinear"
                android:icon="@drawable/ic_view_list"
                android:title="@string/lbl_viewDetail"
                app:showAsAction="collapseActionView" />

        <item
                android:id="@+id/mniGrid"
                android:icon="@drawable/ic_view_grid"
                android:title="@string/lbl_viewGrid"
                app:showAsAction="collapseActionView" >
        <menu>
            <item
                    android:id="@+id/mniGrid2"
                    android:title="@string/lbl_viewGrid2"
                    app:showAsAction="collapseActionView" />
            <item
                    android:id="@+id/mniGrid3"
                    android:title="@string/lbl_viewGrid3"
                    app:showAsAction="collapseActionView" />
        </menu>
        </item>
    </group>
</menu>
